Add testing and prediction
Also changed mutation and crossover with new random package. Added genetic thread (worker).
